--- a/css/index.css
+++ b/css/index.css
@@ -60,18 +60,59 @@ header nav a{
     text-align: center;
     align-self: center;
     filter:opacity(100%)
-        brightness(1.0);
-    background-image: url(https://images.unsplash.com/photo-1484242780561-6aff8688c36a?ixid=MXwxMjA3fDB8MHxzZWFyY2h8NDB8fGJ1aWxkaW5nfGVufDB8MHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60);
+        brightness(1.1);
+    background-image: url(https://images.unsplash.com/photo-1578985893575-4e38b656f31c?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1778&q=80);
+    background-repeat: no-repeat;
+    background-size: cover;
+    text-align: center;
 }
 .header--title-container{
     width: 80%;
     min-width: 288px;
     max-width: 900px;
     margin: 20% auto;
+   
 }
 .header--title-container h1{
     font-size: 3rem;
     font-weight: 900;
     color: var(--gris-texto);
     text-transform: uppercase;
+    line-height:3.4rem;
+    text-shadow: 1px 1px 5px gainsboro;
 }
+
+.header--title-container p{
+    margin-top: 20px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: var(--gris-texto);
+    text-shadow: 1px 1px 5px gainsboro;
+}
+.header--title-container .header--button{
+    position: absolute;
+    left: calc(50% - 115px);
+    top: 270px;
+    display: block;
+    padding: 15px;
+    width: 229px;
+    height: 48px;
+    background-color: var(--rojo-zaragoza);
+    box-shadow: 0px 4px 8px rgba(10, 10, 10, 1.6);
+    border: none;
+    border-radius: 5px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: var(--gris-suave);
+}
+/* .header--button span{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-left: 10px;
+    background-image:url(../assets/icons/arrow-down-sign-to-navigate.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+} */
