--- a/css/index.css
+++ b/css/index.css
@@ -196,3 +196,35 @@ main{
     color: var(--gris-texto);
     font-weight: 400;
    }
+   .background-about-us{
+       width: 100%;
+       height: 500px;
+       background-image: url(../assets/imgs/ciel-cheng-atClaTF60M8-unsplash.jpg);
+       background-size: cover;
+       background-position: center;
+       background-repeat: no-repeat;
+       margin-bottom: 50px;
+   }
+   .about-us--container{
+       width: 100%;
+       text-align: center;
+   }
+   .about-us--container .main-container--title p{
+       text-align: justify;
+   }
+   .button{
+    position: relative;
+    left: calc(50% - 115px);
+    display: block;
+    padding: 10px;
+    width: 229px;
+    height: 40px;
+    background-color: var(--rojo-zaragoza);
+    box-shadow: 0px 4px 8px rgba(10, 10, 10, 1.6);
+    border: none;
+    border-radius: 50px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: var(--gris-suave);
+   }
